# zero2prod

./: .dockerignore  .env  .gitlab-ci.yml  Cargo.toml  Dockerfile  spec.yaml
configuration/: base.yml  local.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
