[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Justin Shaw <justin@justinmshaw.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-http = "=3.0.0-beta.9"
actix-web = "=4.0.0-beta.8"
chrono = "0.4.15"
config = "0.11.0"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde-aux = "2.3.0"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.4.0-beta.8"
tracing-bunyan-formatter = "0.2.6"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
unicode-segmentation = "1.8.0"
uuid = { version = "0.8.1", features = ["v4"] }
validator = "0.14.0"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
fake = "~2.3"
once_cell = "1.8.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = "1"
